Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59989

winrt networking does not work when http access is only available via proxy

    XMLWordPrintable

Details

    • 13bb46bc3ad5e43a77fe2bcdacf9246a23983ce1 acc134c8ea5f756dd605d0de50ca1a263383de2d

    Description

      A machine that only has http access via proxy is not able to make any connections when using the winrt port of Qt. Http proxies usually have "HostNameLookupCapability" set so that the host lookup in Qt is skipped and the connection is made using the host name (the proxy is responsible for the host lookup then). This logic is not implemented for the winrt port though.

      UWP APIs work based on host names so we should not connect to a looked up ip address at all but use the host name directly. DNS lookup and proxy handling (also for VPNs) will happen automatically with this approach.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            owolff Oliver Wolff
            owolff Oliver Wolff
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes